<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uoftShade"
    tools:context="com.c01.MainMenu">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:paddingRight="0dp"
        android:paddingTop="0dp" >

        <ImageView
            android:id="@+id/drawable"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/box" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/adminTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="none"
                android:text="Welcome Student"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingLeft="100dp"
                android:paddingRight="100dp"
                android:paddingTop="75dp">

                <Button
                    android:id="@+id/addAssignmentButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="Upload Assignment" />

                <Button
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="Inbox" />

                <Button
                    android:id="@+id/messageStudentButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="Message" />

                <Button
                    android:id="@+id/addNotesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="Add Notes" />

                <Button
                    android:id="@+id/Quiz"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="Quiz" />

                <Button
                    android:id="@+id/ProblemSet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="Problem Set" />

                <Button
                    android:id="@+id/CheckGradesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="MyGrades" />

                <Button
                    android:id="@+id/viewNotesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="View Notes" />

                <Button
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Logout" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
